# tracer

./: package.json
.github/workflows/: publish-go.yml  publish-node.yml  publish-python.yml  publish-ruby.yml  publish.yml  test.yml
go/: .gitignore  detect_ci.go  detect_ci_test.go  go.mod  rewire.go  rewire_test.go  testing.go  transport.go  transport_test.go
node/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
node/src/: detect-ci.ts  index.ts  register.ts
node/test/: detect-ci.test.ts  init.test.ts
python/: pyproject.toml
python/rewire_tracer/: __init__.py  detect_ci.py  pytest_plugin.py
python/tests/: test_detect_ci.py  test_init.py  test_pytest_plugin.py
ruby/: .gitignore  .rubocop.yml  rewire-tracer.gemspec
ruby/lib/rewire/: tracer.rb
ruby/lib/rewire/tracer/: detect_ci.rb  railtie.rb  rspec.rb  version.rb
ruby/spec/: spec_helper.rb
ruby/spec/rewire/tracer/: detect_ci_spec.rb  init_spec.rb  rspec_spec.rb
